# suuid

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release-testpypi.yml  release.yml
src/suuid/: __init__.py  _normalize.py  cli.py  core.py
tests/: test_golden.py  test_suuid.py
