[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "suuid"
version = "0.2.0"
description = "Semantic, filename- and S3-safe UUIDs: <Class>__<safe_name>__<huuid>"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Lepy", email = "lepy@tuta.io" }]
keywords = ["uuid", "suuid", "identifier", "s3", "filename", "deterministic", "content-addressed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/lepy/suuid"
Repository = "https://github.com/lepy/suuid"
Issues = "https://github.com/lepy/suuid/issues"

[project.scripts]
suuid = "suuid.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/suuid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
